fix[FE] removed unnecessary imports